# docs/swagger.json
@@ -559,6 +559,105 @@
                 }
             }
         },
+        "/user/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Exibe o perfil do Usuario de dado ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Recupera um Usuario pelo id",
+                "operationId": "get-user-by-int",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Users"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Atualiza um usuario sobre a utilização da aplicação",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Atualiza um Usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Udpdate User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Users"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Users"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
         "/question": {
             "post": {
                 "security": [
@@ -606,6 +705,111 @@
                         "description": "Not found"
                     }
                 }
+            },
+            "/appointment": {
+                "post": {
+                    "security": [
+                        {
+                            "BearerAuth": []
+                        }
+                    ],
+                    "description": "Creates a Appointment",
+                    "consumes": [
+                        "application/json"
+                    ],
+                    "produces": [
+                        "application/json"
+                    ],
+                    "summary": "Create Appointment",
+                    "parameters": [
+                        {
+                            "type": "string",
+                            "description": "Token",
+                            "name": "Authorization",
+                            "in": "header",
+                            "required": true
+                        },
+                        {
+                            "description": "Create Appointment",
+                            "name": "appointment",
+                            "in": "body",
+                            "required": true,
+                            "schema": {
+                                "$ref": "#/definitions/model.Appointment"
+                            }
+                        }
+                    ],
+                    "responses": {
+                        "201": {
+                            "description": "Created",
+                            "schema": {
+                                "$ref": "#/definitions/model.Appointment"
+                            }
+                        },
+                        "400": {
+                            "description": "Bad request"
+                        },
+                        "404": {
+                            "description": "Not found"
+                        }
+                    }
+                }
+            },
+            "/appointment/{id}": {
+                "put": {
+                    "security": [
+                        {
+                            "BearerAuth": []
+                        }
+                    ],
+                    "description": "Atualiza um Appointment sobre a utilização da aplicação",
+                    "consumes": [
+                        "application/json"
+                    ],
+                    "produces": [
+                        "application/json"
+                    ],
+                    "summary": "Atualiza um Appointment",
+                    "parameters": [
+                        {
+                            "type": "string",
+                            "description": "Token",
+                            "name": "Authorization",
+                            "in": "header",
+                            "required": true
+                        },
+                        {
+                            "description": "Udpdate User",
+                            "name": "appointment",
+                            "in": "body",
+                            "required": true,
+                            "schema": {
+                                "$ref": "#/definitions/model.Appointment"
+                            }
+                        },
+                        {
+                            "type": "integer",
+                            "description": "Appointment ID",
+                            "name": "id",
+                            "in": "path",
+                            "required": true
+                        }
+                    ],
+                    "responses": {
+                        "200": {
+                            "description": "OK",
+                            "schema": {
+                                "$ref": "#/definitions/model.Appointment"
+                            }
+                        },
+                        "400": {
+                            "description": "Bad request"
+                        },
+                        "404": {
+                            "description": "Not found"
+                        }
+                    }
+                }
             }
         }
     },
@@ -635,7 +839,7 @@
                 "password": {
                     "type": "string"
                 },
-                "username": {
+                "email": {
                     "type": "string"
                 }
             }
@@ -665,6 +869,35 @@
                 },
                 "userID": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Appointment": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type":"integer"
+                },
+                "month": {
+                    "type":"integer" 
+                },
+                "year": {
+                    "type":"integer" 
+                },
+                "hour": {
+                    "type":"integer" 
+                },
+                "minutes": {
+                    "type":"integer" 
+                },
+                "showedUp": {
+                    "type":"boolean" 
+                },
+                "vetID": {
+                    "type":"integer" 
+                },
+                "animalID": {
+                    "type":"integer" 
                 }
             }
         }
